# glesbox

./: .gitattributes  CMakeLists.txt  README.md
sample/android/mirror/: AndroidManifest.xml
sample/android/mirror/jni/: Android.mk  Application.mk  native.cpp  util.h
sample/android/mirror/res/layout/: activity_mirror.xml
sample/android/mirror/res/values/: strings.xml
sample/android/mirror/src/com/buffer/mirror/: CameraView.java  MirrorActivity.java  MirrorRender.java  MirrorSurfaceView.java
sample/android/mirror2/: AndroidManifest.xml
sample/android/mirror2/jni/: Android.mk  native.cpp  util.h
sample/android/mirror2/res/layout/: activity_mirror.xml
sample/android/mirror2/res/menu/: beauty.xml
sample/android/mirror2/src/com/buffer/mirror2/: CameraView.java  MirrorActivity.java  MirrorSurfaceView.java
sample/ios/mirror/: mirror-Bridging-Header.h
sample/ios/mirror/mirror/: AppDelegate.swift  ViewController.swift  libgb_caller.h
sample/ios/mirror/mirror.xcodeproj/: project.pbxproj
sample/ios/mirror/mirror.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
sample/ios/mirror/mirror/Base.lproj/: Main.storyboard
sample/ios/mirror2/mirror2/: libgb_caller.mm
sample/ios/mirror2/mirror2.xcodeproj/: project.pbxproj
sample/ios/mirror2/mirror2/Assets.xcassets/AppIcon.appiconset/: Contents.json
sample/ios/mirror2/mirror2/CameraHelper/: CameraHelper.h  CameraHelper.mm
sample/win/mirror/: main.cpp  mirror.vcxproj
sample/win/mirror2/: main.cpp  mirror2.vcxproj
src/: CMakeLists.txt  SimpleImage.cpp  SimpleImage.hpp  common.hpp  glesbox.cpp  glesbox.hpp  glstub.cpp  glstub.hpp  model.cpp  model.hpp  platform.hpp  shaderprogram.cpp  shaderprogram.hpp  simpleimage.cpp  simpleimage.hpp  yuvimage.cpp  yuvimage.hpp
tools/egl_mac/src/: egl.m
tools/libyuv/include/libyuv/: rotate.h
tools/libyuv/lib/win/: libyuv.lib
tools/libyuv/src/: rotate.cc
tools/opencv/include/opencv/: cvcompat.h  cxcore.h  cxcore.hpp  cxvideocap.hpp
tools/opencv/lib/: cv200.lib  cvaux200.lib  cxcore200.lib  cxts200.lib  highgui200.lib  ml200.lib
